# cli

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pipeline.yml
dreamhubcli/: __init__.py  auth.py  auth_callback.py  client.py  config.py  errors.py  main.py  mcp_server.py  output.py
dreamhubcli/commands/: _crud.py  access.py  activities.py  auth.py  companies.py  deals.py  enrichment.py  history.py  leads.py  mcp.py  people.py  reporting.py  search.py  settings.py  tasks.py  update.py  users.py
dreamhubcli/static/: login-callback.html
tests/: conftest.py
tests/e2e/: conftest.py  test_access_e2e.py  test_activities_e2e.py  test_auth_e2e.py  test_companies_e2e.py  test_deals_e2e.py  test_enrichment_e2e.py  test_history_e2e.py  test_leads_e2e.py  test_people_e2e.py  test_reporting_e2e.py  test_search_e2e.py  test_settings_e2e.py  test_tasks_e2e.py  test_users_e2e.py
tests/unit/: test_auth.py  test_auth_callback.py  test_client.py  test_config.py  test_errors.py  test_mcp_server.py  test_output.py  test_pat_fallback.py
tests/unit/test_commands/: test_activities.py  test_auth_cmd.py  test_crud_commands.py  test_custom_commands.py  test_mcp.py  test_special_commands.py  test_update_cmd.py
