[tool.poetry]
name = "dreamhubcli"
version = "1.2.0"
description = "Dreamhub CLI — unified command-line interface for all Dreamhub APIs"
authors = ["Rafi <rafi@dreamhub.ai>"]
readme = "README.md"

[tool.poetry.scripts]
dh = "dreamhubcli.main:main"

[tool.poetry.dependencies]
python = "^3.11"
typer = {version = "^0.15", extras = ["all"]}
httpx = "^0.28"
rich = "^13"
tomli = "^2.0"
tomli-w = "^1.0"
pydantic = "^2"
fastmcp = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
ruff = "^0.4"
respx = "^0.22"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end tests against the staging API (requires DH_E2E_TOKEN and DH_E2E_TENANT_ID)",
]

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "tests/*"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
